# Majora-s-Mask-Randomizer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Configure.bat  Majora's Mask Randomizer GUI.sln  Majora's Mask Randomizer.cbp  Majora's Mask Randomizer.depend  Majora's Mask Randomizer.layout  Open Solution.bat  README.md  _agent_run.bat  _check.py  _create-rom.bat  _create-roms.bat  feature-roadmap.html  main.cpp
.cursor/rules/: New-Settings.mdc
MMR_GUI/: AsyncRaceCode.cs  BingoCardDialog.Designer.cs  BingoCardDialog.cs  BingoCardExport.cs  BingoCardGenerator.cs  BingoGoalButton.cs  BingoGoalList.cs  BingoGoalMark.cs  BingoGoalValidator.cs  BingoLinePopoutDialog.Designer.cs  BingoLinePopoutDialog.cs  BingoMarkMenuForm.cs  BingoObtainabilityContext.cs  BingoParityHarness.cs  BingoPlacementMap.cs  BingoRerollLog.cs  BingoRerollLogDialog.Designer.cs  BingoRerollLogDialog.cs  BingoSrlGenerator.cs  BingoTypes.cs  CutscenesSelector.Designer.cs  CutscenesSelector.cs  CutscenesSelectorLayout.cs  Form1.Designer.cs  Form1.Designer.cs.full  Form1.cs  ItemGrantCounts.cs  ItemTabBuilder.cs  ItemUsefulnessDialog.Designer.cs  ItemUsefulnessDialog.cs  LogicEditor.Designer.cs  LogicEditor.cs  LogicEditorLayout.cs  LogicGraphCanvas.cs  LogicGraphDialog.Designer.cs  LogicGraphDialog.cs  LogicGraphInventoryPanel.cs  LogicObtainability.cs  LogicUsefulness.cs  MainWindowLayout.cs  (+24 more)
MMR_GUI/Data/: item_slot_counts.json  mm_bingo_standard.json  standard_presets.json
MMR_GUI/Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.settings
Majora's Mask Randomizer GUI/: CutscenesSelector.Designer.cs  CutscenesSelector.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Item.cs  LogicEditor.Designer.cs  LogicEditor.cs  Majora's Mask Randomizer GUI.csproj  pmc.Designer.cs  pmc.cs  pmc.resx  wallets_form.Designer.cs  wallets_form.cs
Majora's Mask Randomizer GUI/Properties/: Resources.Designer.cs
_create-roms/: injector.ini
_rom-patcher-js/: RomPatcher.js
cutscenes/: cap.zcutscene  clm.zcutscene  couples.zcutscene  couples_long.zcutscene  elegy.zcutscene  flat_spawning.zcutscene  gfs.zcutscene  gibdo.zcutscene  goron_lullaby.zcutscene  goron_lullaby2.zcutscene  goron_mask.zcutscene  goron_sleep.zcutscene  great_bay_temple_ye_holds.zcutscene  great_fairy_ct.zcutscene  great_fairy_ct0.zcutscene  great_fairy_magic_1.zcutscene  great_fairy_magic_2.zcutscene  great_fairy_magic_mask.zcutscene  great_fairy_mask.zcutscene  hms_1.zcutscene  hms_2.zcutscene  kart_ride.zcutscene  lullaby_intro.zcutscene  lullaby_intro2.zcutscene  nwbn.zcutscene  oath_cs.zcutscene  sakon_hideout.zcutscene  sharp_sos.zcutscene  sharp_spawning.zcutscene  snowhead_beaten.zcutscene  snowhead_temple_ye_holds.zcutscene  sonata.zcutscene  stone_tower_temple_ye_holds.zcutscene  tear_falling.zcutscene  turtle.zcutscene  woodfall_cleaning.zcutscene  woodfall_rising.zcutscene  woodfall_tatl_end.zcutscene  woodfall_temple_ye_holds.zcutscene  your_horse.zcutscene  (+1 more)
files/: BW.yaz0  HBW.yaz0  Log.css  Log.js  LogEnd.html  LogStart.html  LogStart2.html  Randomizer  l.yaz0
include/rando/: color.hpp  error.hpp  inventory.hpp  io.hpp  item.hpp  kafei.hpp  logging.hpp  rom.hpp  time.hpp  utils.hpp
logic/: Glitched.txt  Glitchless.txt
ndec/: ndec.c  readwrite.h  run.bat
presets/: Deku Nuts.ini  FNB.ini  Low%.ini  Old Rando.ini
scripts/: _linecount.bat  _run_export_trim.bat  extract_item_tabs.py  gen_bingo_goals.py  gen_item_slot_counts.py  gen_standard_presets.py  trim_form1_designer.py
src/: color.cpp  error.cpp  inventory.cpp  io.cpp  item.cpp  kafei.cpp  logging.cpp  main.cpp  rom.cpp  time.cpp  utils.cpp
